4. modules/add/add_shares.php
5. modules/add/add_withdrawal.php
6. modules/add/engage_loan_calculator.php
7. modules/classes/Settings.php
8. modules/dashboard/account_overview.php
9. modules/dashboard/loan_calculator.php
10. modules/menus/sub-sub-menu-buttons.php
11. modules/menus/sub_menu_account.php
12. modules/menus/sub_menu_funding.php
13. modules/menus/sub_menu_loans.php
14. modules/menus/sub_menu_transactions.php
15. modules/read/view_account_holders_individual_account.php
16. modules/read/view_account_to_account_transfers.php
17. modules/read/view_bids_on_project.php
18. modules/read/view_contacts_individual.php
19. modules/read/view_deposits.php
20. modules/read/view_investors_individual.php
21. modules/read/view_loans.php
22. modules/read/view_loans_individual.php
23. modules/read/view_loan_business_data.php
24. modules/read/view_loan_guarantors.php
25. modules/read/view_loan_repayments.php
26. modules/read/view_next_of_kins_individual.php
27. modules/read/view_projects.php
28. modules/read/view_projects_individual.php
29. modules/read/view_project_bids.php
30. modules/read/view_project_bids_individual.php
31. modules/read/view_shares.php
32. modules/read/view_transactions.php
33. modules/read/view_unbidded_projects.php
34. modules/read/view_withdrawals.php
35. modules/update/update_account.php
36. modules/update/update_investor_type.php
37. modules/update/update_signature.php

Added files:
1. modules/images/customers/signatures (folder)

Deleted files:
Null

------------------------------------------------
API
------------------------------------------------

Edited files:

1. core/configs.ini
2. modules/classes/Reports.php
3. modules/classes/Settings.php
4. modules/classes/Users.php
5. modules/index.php

Added files:
Null

Deleted files:
Null

*********************************************************************************************************************************************************************************************