@@ -1,30 +1,31 @@
 ; This file contains the necessary system configurations
 
 ;[database host]
-host_name   = "localhost"
+host_name   = "127.0.0.1"
 
 ;[database name]
-db_name     = "staqpesa_moba"
+db_name     = "staqpesa_moba_v1.0"
 
 ;[database user]
 db_user     = "root"
 ;db_user     = "staqpesa_moba"
 
 ;[database password]
-db_password = ""
+db_password = "sogoni1608"
 ;db_password = "#moba@2018"
 
 ;[domain name]
 domain_name = "mobasacco.co.ke"
 
 ;[api urls]
-api_url   = "http://localhost/staqpesa_api/?index&"
-;api_url   = "http://localhost:8081/ictinnovators_2018/staqpesa_v2.1_api/?index&"
+;api_url   = "http://localhost/staqpesa_api/?index&"
+api_url   = "http://localhost:8082/ictinnovators_2018/staqpesa_v2.1_api/?index&"
 ;api_url   = "https://api.mobasacco.co.ke/?index&"
 
 ;[website urls]
 displayed_website_link = "mobasacco.co.ke"
-website_url = "http://localhost/staqpesa_website_moba"
+;website_url = "http://localhost/staqpesa_website_moba"
+website_url = "http://localhost:8082/re-staq_moba"
 ;website_url = "https://mobasacco.co.ke"
 
 ;[admin site urls]
