@@ -414,3 +414,15 @@ Deleted files:
 Null
 
 *********************************************************************************************************************************************************************************************
+17 October, 2018 - Bellarmine
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+Summary
+1. Added payment instructions to the right of add deposit.
+------------------------------------------------
+Portal
+------------------------------------------------
+
+Edited files:
+
+1. modules/add/add_deposit.php
+*********************************************************************************************************************************************************************************************
